# IPC

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  build.sh
src/backend/: main.c
src/backend/common/: json_output.c  json_output.h  test_json_output  test_json_output.c
src/backend/pipes/: pipe_demo.c
src/backend/shared_memory/: shm_demo.c  shm_handler.c  shm_handler.h
src/backend/sockets/: socket_demo.c  socket_demo.h
src/frontend/: main.py
src/frontend/backend_comm/: process_manager.py
src/frontend/gui/: ipc_tabs.py  main_window.py
tests/backend_tests/: pipe_test.c  pipe_test.cpp  test_json_output.c  test_shm.c  test_sockets.c
tests/frontend_tests/: integration.py
